# Scholarmind

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  USER_GUIDE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  full.yml
.streamlit/: config.toml
docs/: USER_GUIDE.md
scholarmind/: cli.py  config.py  guardrails.py  model_cache.py
scholarmind/agents/: base.py  discovery.py  figures.py  gap_analysis.py  llm_client.py  methodology.py  novelty.py  qa.py  summarization.py  writing.py
scholarmind/api/: app.py  models.py
scholarmind/citations/: export.py  formatter.py  latex.py  metadata.py  service.py  verifier.py  verify.py  zotero.py
scholarmind/discovery/: arxiv.py  dedupe.py  ingest.py  models.py  openalex.py  semantic_scholar.py  service.py
scholarmind/eval/: metrics.py  runner.py
scholarmind/ingestion/: chunker.py  dedupe.py  embedder.py  loader.py  multimodal.py  parser.py  pipeline.py  store.py
scholarmind/orchestrator/: graph.py  run.py  state.py
scholarmind/retrieval/: dense.py  hybrid.py  papers.py  reranker.py  search.py  sparse.py
scholarmind/webapp/: app.py  library.py
scripts/: generate_sample_pdf.py  generate_sample_pdf_2.py  generate_sample_pdf_multimodal.py
tests/: conftest.py  test_agents_base.py  test_api.py  test_chunker.py  test_citation_export.py  test_citation_formatter.py  test_citation_latex.py  test_citation_metadata.py  test_citation_service.py  test_citation_verifier.py  test_citation_zotero.py  test_config.py  test_delete.py  test_dense.py  test_discovery.py  test_discovery_arxiv.py  test_discovery_dedupe.py  test_discovery_ingest.py  test_discovery_openalex.py  test_discovery_semantic_scholar.py  test_discovery_service.py  test_eval.py  test_figures.py  test_gap_analysis.py  test_guardrails.py  test_hybrid.py  test_ingestion_dedupe.py  test_llm_client.py  test_loader.py  test_methodology.py  test_model_cache.py  test_multimodal.py  test_novelty.py  test_orchestrator_graph.py  test_orchestrator_run.py  test_papers.py  test_parser.py  test_pipeline.py  test_qa.py  test_reranker.py  (+8 more)
tests/eval_set/: eval_set.json
