[project]
name = "scholarmind"
version = "0.1.0"
description = "A multi-agent, RAG-powered research assistant for PhD students"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "langgraph>=0.2.0",
    "llama-index>=0.11.0",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "reportlab>=4.2.0",
]

[project.scripts]
scholarmind = "scholarmind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarmind"]
