[project]
name = "scholarmind"
version = "0.1.0"
description = "A multi-agent, RAG-powered research assistant for PhD students"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "langgraph>=0.2.0",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=4.3.0",
    "pymupdf>=1.24.0",
    "openai>=1.50.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "reportlab>=4.2.0",
    "ruff>=0.6.0",
]
webapp = [
    "streamlit>=1.30.0",
]

[project.scripts]
scholarmind = "scholarmind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarmind"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer/FastAPI declare arguments via calls in defaults (Argument/Option/Form/File); this is idiomatic, not a bug.
extend-immutable-calls = [
    "typer.Argument",
    "typer.Option",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Query",
    "fastapi.Depends",
]

[tool.ruff.lint.per-file-ignores]
# Test assertions frequently embed long literal fixture strings; wrapping them hurts readability.
"tests/**" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that download/load HuggingFace embedding or reranker models (excluded from the fast CI job)",
    "llm: tests that make a live LLM or network (OpenRouter/Crossref) call (excluded from the fast CI job; LLM calls skip without a key)",
]
